--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,12 +1,17 @@
 @import './colors.scss';
+@import url('https://fonts.googleapis.com/css2?family=Aleo:wght@300;400;700&family=Poppins:wght@300;400;500;700&display=swap');
 
 html, body, * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: "Aleo", sans-serif;
-    font-weight: 500;
+    font-family: "Poppins", sans-serif;
   }
+
+html, body {
+  height: 100vh;
+  width: 100%;
+}
 
 .material-design-icon {
     
