--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,7 @@ html, body {
   width: 100%;
 }
 
-.material-design-icon {
-    
+.material-design-icon__svg {
+    width: 100%;
+    height: 100%;
 }
